# cosmos-predict2

./: .dockerignore  .gitignore  .link-check.json  .pre-commit-config.yaml  ATTRIBUTIONS.md  ATTRIBUTIONS.txt  CONTRIBUTING.md  Dockerfile  README.md  cosmos-predict2.yaml  justfile  pyproject.toml  requirements-conda.txt  requirements-docker.txt  ruff.toml  uv.Dockerfile
assets/text2image/: example_prompt.txt
assets/video2world/: example_prompt.txt
cosmos_predict2/: checkpointer.py  conditioner.py
cosmos_predict2/auxiliary/: cosmos_reason1.py  text_encoder.py
cosmos_predict2/auxiliary/guardrail/blocklist/: utils.py
cosmos_predict2/auxiliary/guardrail/common/: core.py
cosmos_predict2/auxiliary/guardrail/face_blur_filter/: face_blur_filter.py  retinaface_utils.py
cosmos_predict2/auxiliary/guardrail/llamaGuard3/: llamaGuard3.py
cosmos_predict2/auxiliary/guardrail/video_content_safety_filter/: video_content_safety_filter.py  vision_encoder.py
cosmos_predict2/callbacks/: device_monitor.py  every_n_draw_sample.py  every_n_draw_sample_multiviewvideo.py  grad_clip.py  iter_speed.py  loss_log.py
cosmos_predict2/configs/: conditioner.py
cosmos_predict2/configs/action_conditioned/: config.py
cosmos_predict2/configs/action_conditioned/defaults/: model.py
cosmos_predict2/configs/action_conditioned/experiment/: exp.py
cosmos_predict2/configs/base/: config.py  config_multiview.py  config_natten.py  config_text2image.py  config_video2world.py
cosmos_predict2/configs/base/defaults/: data.py  model.py  optimizer.py  scheduler.py
cosmos_predict2/configs/base/experiment/: agibot_head_center_fisheye_color.py  cosmos_nemo_assets.py  cosmos_nemo_assets_lora.py  groot.py  utils.py  video2world_data.py
cosmos_predict2/configs/base/experiment/multiview/: waymo.py
cosmos_predict2/data/: dataset_image.py  dataset_multiview.py  dataset_utils.py  dataset_video.py  webdataloader.py
cosmos_predict2/data/action_conditioned/: action_conditioned_dataset.py  dataset_utils.py
cosmos_predict2/datasets/: cached_replay_dataloader.py  dataset_provider.py  joint_dataloader.py  utils.py  watchdog.py  webdataset.py
cosmos_predict2/datasets/augmentors/: append_fps_frames_for_image.py  merge_datadict.py  text_transforms_for_image.py  text_transforms_for_video.py  video_parsing.py
cosmos_predict2/datasets/data_sources/: mock_data.py
cosmos_predict2/datasets/decoders/: video_decoder.py
cosmos_predict2/functional/: batch_ops.py  lr_scheduler.py  multi_step.py  runge_kutta.py
cosmos_predict2/models/: multiview_dit.py  multiview_model.py  text2image_dit.py  text2image_model.py  video2world_action_dit.py  video2world_action_model.py  video2world_dit.py  video2world_model.py
cosmos_predict2/module/: a2a_cp.py  attention.py  denoise_prediction.py  denoiser_scaling.py  neighborhood_attn.py  res_sampler.py
cosmos_predict2/pipelines/: action_video2world.py  base.py  multiview.py  text2image.py  video2video_sdedit.py  video2world.py  video2world_action.py
cosmos_predict2/schedulers/: rectified_flow_scheduler.py
cosmos_predict2/tokenizers/: interface.py  tokenizer.py
cosmos_predict2/utils/: checkpointer.py  dtensor_helper.py  fsdp_helper.py  fused_adam_dtensor.py  misc.py  torch_future.py
cosmos_predict2/utils/ext/: cp_allocators.py  cp_comms.py  cutlass_fmha_interface.py  dit_block_onnx2trt.py  natten_a2a.py  natten_interface.py  natten_ring.py  sageattn_fp8.py  sageattn_quant.py  sageattn_ring.py  trt_inference.py
cosmos_predict2/utils/flash_attn_3/: flash_attn_interface.py
cosmos_predict2/vram_management/: layers.py
documentations/: inference_multiview.md  inference_text2image.md  inference_text2world.md  inference_video2world.md  performance.md  post-training_multiview_waymo.md  post-training_text2image.md  post-training_text2image_cosmos_nemo_assets.md  post-training_video2world.md  post-training_video2world_action.md  post-training_video2world_agibot_fisheye.md  post-training_video2world_cosmos_nemo_assets.md  post-training_video2world_gr00t.md  post-training_video2world_lora.md  setup.md
examples/: multiview.py  text2image.py  text2world.py  video2video_sdedit.py  video2world.py  video2world_action.py  video2world_bestofn.py  video2world_gr00t.py  video2world_lora.py  video2world_lvg.py
examples/project/: README.md  pyproject.toml
imaginaire/: config.py  constants.py  trainer.py
imaginaire/auxiliary/: text_encoder.py
imaginaire/callbacks/: every_n.py
imaginaire/configs/reason1/: model_config.py  model_config_qwen.py
imaginaire/datasets/: mock_dataset.py
imaginaire/datasets/webdataset/: webdataset.py
imaginaire/datasets/webdataset/augmentors/: augmentor.py
imaginaire/datasets/webdataset/augmentors/image/: misc.py  normalize.py  padding.py  resize.py
imaginaire/datasets/webdataset/config/: schema.py
imaginaire/datasets/webdataset/decoders/: image.py  pickle.py
imaginaire/datasets/webdataset/distributors/: __init__.py  multi_aspect_ratio_v2.py
imaginaire/datasets/webdataset/utils/: iterators.py  misc.py
imaginaire/lazy_config/: __init__.py  lazy.py
imaginaire/models/: vlm_qwen.py  vlm_qwen_omni.py
imaginaire/networks/: qwen2_5_vl.py
imaginaire/utils/: callback.py  checkpointer.py  config_helper.py  device.py  distributed.py  ema.py  graph.py  io.py  log.py  misc.py
imaginaire/utils/easy_io/: easy_io.py  file_client.py
imaginaire/utils/easy_io/backends/: __init__.py  registry_utils.py
imaginaire/utils/easy_io/handlers/: __init__.py
imaginaire/utils/env_parsers/: env_parser.py
imaginaire/visualize/: video.py
prompts/video2world/negative/: default.txt
scripts/: _sync.sh  convert_distcp.py  convert_dit_onnx2trt.py  download_checkpoints.py  download_distcp.py  export_dit_onnx_args.json  extract_images_from_videos.py  get_t5_embeddings.py  get_t5_embeddings_from_cosmos_nemo_assets.py  get_t5_embeddings_from_groot_dataset.py  hf_text2image.py  hf_video2world.py  install_decord_arm.sh  prepare_agibot_fisheye_data.py  test_environment.py
