[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "cosmos_predict2"
version = "1.0.3"
authors = [
  {name = "NVIDIA Corporation"},
]
description = "Cosmos World Foundation Model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "attrs==25.1.0",
  "better-profanity==0.7.0",
  "boto3==1.35.99",
  "decord==0.6.0",
  "diffusers==0.33.1",
  "einops==0.8.1",
  "ftfy==6.3.1",
  "fvcore==0.1.5.post20221221",
  "huggingface-hub==0.32.4",
  "hydra-core==1.3.2",
  "imageio[pyav,ffmpeg]==2.37.0",
  "iopath==0.1.10",
  "ipdb==0.13.13",
  "loguru==0.7.2",
  "mediapy==1.2.2",
  "megatron-core==0.10.0",
  "modelscope==1.26.0",
  "nltk==3.9.1",
  "numpy==1.26.4",
  "nvidia-ml-py==12.535.133",
  "omegaconf==2.3.0",
  "opencv-python==4.10.0.84",
  "pandas==2.2.3",
  "peft==0.14.0",
  "pillow==11.1.0",
  "protobuf==4.25.3",
  "pycocotools==2.0.10",
  "pynvml==12.0.0",
  "pyyaml==6.0.2",
  "qwen-vl-utils[decord]==0.0.11",
  "retinaface-py==0.0.2",
  "safetensors==0.5.3",
  "scikit-image==0.25.2",
  "sentencepiece==0.2.0",
  "termcolor==2.5.0",
  "tqdm==4.66.5",
  "transformers==4.51.3",
  "triton==3.2.0",
  "webdataset==0.2.111",
]

[project.optional-dependencies]
apex = ["apex"]
# https://github.com/NVIDIA/TransformerEngine/blob/main/pyproject.toml
# https://github.com/Dao-AILab/flash-attention?tab=readme-ov-file#installation-and-features
build = [
  "cmake>=3.21",
  "flax>=0.7.1",
  "jax[cuda12]",
  "ninja",
  "packaging",
  "pip>=25.1",
  "psutil",
  "pybind11[global]",
  "setuptools>=61.0",
  "wheel",
]
cu126 = [
  "nvidia-nvtx-cu12==12.6.*",
  "torch==2.6.0",
  "torchvision==0.21.0",
]
flash-attn = ["flash-attn==2.6.3"]
flash-attn-3 = ["flash-attn-3"]
natten = ["natten==0.20.1"]
transformer-engine = ["transformer-engine"]

[project.urls]
homepage = "https://github.com/nvidia-cosmos/cosmos-predict2/"
issues = "https://github.com/nvidia-cosmos/cosmos-predict2/issues"

[tool.uv]
no-build-isolation-package = [
  "apex",
  "flash-attn",
  "flash-attn-3",
  "natten",
  "transformer-engine",
]

[tool.uv.sources]
apex = { git = "https://github.com/spectralflight/apex.git", branch = "cosmos" }
flash-attn-3 = { git = "https://github.com/Dao-AILab/flash-attention.git", rev = "27f501d", subdirectory = "hopper" }
torch = [
  { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
  { index = "pytorch-cu126", extra = "cu126" },
]
transformer-engine = { git = "https://github.com/NVIDIA/TransformerEngine.git", tag = "v1.13" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.build-backend]
module-name = "cosmos_predict2"
module-root = ""

[tool.isort]
profile = "black"
known_third_party = ["third_party"]
skip = ["third_party"]
line_length = 120

[tool.black]
line-length = 120
exclude = 'third_party'

[tool.coverage.report]
include_namespace_packages = true
skip_empty = true
omit = [
  "tests/*",
  "legacy/*",
  ".venv/*",
  "**/test_*.py",
  "config.py",
  "config-3.10.py"
]
