# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "cosmos-predict2[cu126]",
]

[[tool.uv.index]]
name = "cosmos-cu126"
url = "https://nvidia-cosmos.github.io/cosmos-dependencies/cu126_torch260/simple"
